# fileserver

./: pyproject.toml
files_area/: manage.py
files_area/api/: urls.py  views.py
files_area/file_management/: admin.py  models.py  urls.py  views.py
files_area/file_management/migrations/: 0001_initial.py
files_area/files_area/: asgi.py  settings.py  urls.py  wsgi.py
